force-app/main/default/objects/AI_Workspace_Sync_Settings__c/AI_Workspace_Sync_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AI Workspace Sync Settings</label>
</CustomObject>