force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Calendar_Lookahead_Days__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Lookahead_Days__c</fullName>
    <description>Number of days ahead to sync calendar events</description>
    <inlineHelpText>How many days ahead to sync calendar events</inlineHelpText>
    <label>Calendar Lookahead Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>