force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Calendar_Lookback_Days__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Lookback_Days__c</fullName>
    <description>Number of days back to sync calendar events</description>
    <inlineHelpText>How many days back to sync calendar events</inlineHelpText>
    <label>Calendar Lookback Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>