force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Calendar_Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Sync_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable or disable calendar event synchronization</description>
    <inlineHelpText>Enable calendar sync functionality</inlineHelpText>
    <label>Calendar Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>