force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Digest_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Digest_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable digest email notifications</description>
    <inlineHelpText>Enable digest notifications for synced items</inlineHelpText>
    <label>Digest Enabled</label>
    <type>Checkbox</type>
</CustomField>