force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Digest_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Digest_Frequency__c</fullName>
    <description>Frequency of digest notifications (Daily, Weekly)</description>
    <inlineHelpText>How often to send digest notifications</inlineHelpText>
    <label>Digest Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>