force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Digest_Hour__c.field-meta.xml
<CustomField>
    <fullName>Digest_Hour__c</fullName>
    <description>Hour of day (0-23) to send digest</description>
    <inlineHelpText>Hour of day to send digest (0-23)</inlineHelpText>
    <label>Digest Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>