force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Emails_Per_Batch__c.field-meta.xml
<CustomField>
    <fullName>Emails_Per_Batch__c</fullName>
    <description>Number of emails to fetch per API call</description>
    <inlineHelpText>Emails to fetch per API call (with body)</inlineHelpText>
    <label>Emails Per Batch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>