force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Exclude_Confidential__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Confidential__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Exclude confidential/sensitive emails from sync</description>
    <inlineHelpText>Exclude confidential and sensitive emails</inlineHelpText>
    <label>Exclude Confidential</label>
    <type>Checkbox</type>
</CustomField>