force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Exclude_Internal__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Internal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Exclude internal domain emails from sync</description>
    <inlineHelpText>Exclude emails from internal domains</inlineHelpText>
    <label>Exclude Internal</label>
    <type>Checkbox</type>
</CustomField>