force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Exclude_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Marketing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Exclude marketing/newsletter emails from sync</description>
    <inlineHelpText>Exclude marketing and newsletter emails</inlineHelpText>
    <label>Exclude Marketing</label>
    <type>Checkbox</type>
</CustomField>