force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Exclude_Public_Domains__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Public_Domains__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Exclude public email domains (gmail, yahoo, etc) from lead creation</description>
    <inlineHelpText>Exclude public email domains from lead auto-creation</inlineHelpText>
    <label>Exclude Public Domains</label>
    <type>Checkbox</type>
</CustomField>