force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Excluded_Domains__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Domains__c</fullName>
    <description>Comma-separated list of email domains to exclude from workspace sync</description>
    <inlineHelpText>Enter email domains to exclude from sync (e.g., company.com, subsidiary.com)</inlineHelpText>
    <label>Excluded Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>