force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Excluded_Labels_Categories__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Labels_Categories__c</fullName>
    <description>Comma-separated list of email labels or categories to exclude from workspace sync</description>
    <inlineHelpText>Enter email labels/categories to exclude from sync (e.g., Marketing, Confidential, Internal)</inlineHelpText>
    <label>Excluded Labels/Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>