force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Google_Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Google_Auth_Endpoint__c</fullName>
    <description>Google OAuth authorization endpoint URL. Example: https://accounts.google.com/o/oauth2/v2/auth</description>
    <label>Google Auth Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>