force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Google_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Client_Id__c</fullName>
    <description>Google Cloud Console OAuth Client ID. Get this from Google Cloud Console &gt; APIs &amp; Services &gt; Credentials &gt; OAuth 2.0 Client IDs.</description>
    <label>Google Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>