force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Google_Scope__c.field-meta.xml
<CustomField>
    <fullName>Google_Scope__c</fullName>
    <description>OAuth scopes for Google APIs. Example: openid email profile https://www.googleapis.com/auth/gmail.readonly</description>
    <label>Google Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>