force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Google_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Google_Token_Endpoint__c</fullName>
    <description>Google OAuth token endpoint URL. Example: https://oauth2.googleapis.com/token</description>
    <label>Google Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>