force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Include_Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Include_Completed_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include completed tasks in sync</description>
    <inlineHelpText>Include completed tasks when syncing</inlineHelpText>
    <label>Include Completed Tasks</label>
    <type>Checkbox</type>
</CustomField>