force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Internal_Domains__c.field-meta.xml
<CustomField>
    <fullName>Internal_Domains__c</fullName>
    <description>Comma-separated list of internal domains to exclude</description>
    <inlineHelpText>Comma-separated list of internal domains to exclude from sync</inlineHelpText>
    <label>Internal Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>