force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Lookback_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Hours__c</fullName>
    <description>Number of hours to look back when syncing emails</description>
    <inlineHelpText>How many hours back to sync emails</inlineHelpText>
    <label>Lookback Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>