force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Max_Calendar_Events_Per_User__c.field-meta.xml
<CustomField>
    <fullName>Max_Calendar_Events_Per_User__c</fullName>
    <description>Maximum calendar events to sync per user</description>
    <inlineHelpText>Maximum number of calendar events to sync per user</inlineHelpText>
    <label>Max Calendar Events Per User</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>