force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Max_Emails_Per_User__c.field-meta.xml
<CustomField>
    <fullName>Max_Emails_Per_User__c</fullName>
    <description>Maximum emails to sync per user</description>
    <inlineHelpText>Maximum number of emails to sync per user</inlineHelpText>
    <label>Max Emails Per User</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>