force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Max_Tasks_Per_User__c.field-meta.xml
<CustomField>
    <fullName>Max_Tasks_Per_User__c</fullName>
    <description>Maximum tasks to sync per user</description>
    <inlineHelpText>Maximum number of tasks to sync per user</inlineHelpText>
    <label>Max Tasks Per User</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>