force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Max_Users_Per_Batch__c.field-meta.xml
<CustomField>
    <fullName>Max_Users_Per_Batch__c</fullName>
    <description>Maximum users to process per batch</description>
    <inlineHelpText>Maximum users to process in a single batch</inlineHelpText>
    <label>Max Users Per Batch</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>