force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Microsoft_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Client_Id__c</fullName>
    <description>Azure App Registration Client ID for Microsoft OAuth. Get this from Azure Portal &gt; App Registrations &gt; Your App &gt; Application (client) ID.</description>
    <label>Microsoft Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>