force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Microsoft_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Client_Secret__c</fullName>
    <description>Azure App Registration Client Secret for Microsoft OAuth. Get this from Azure Portal &gt; App Registrations &gt; Your App &gt; Certificates &amp; secrets.</description>
    <label>Microsoft Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>