force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Microsoft_Scope__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Scope__c</fullName>
    <description>OAuth scopes for Microsoft Graph API access. Example: https://graph.microsoft.com/Mail.Read https://graph.microsoft.com/User.Read offline_access</description>
    <label>Microsoft Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>