force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Microsoft_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Token_Endpoint__c</fullName>
    <description>Microsoft OAuth token endpoint URL. Example: https://login.microsoftonline.com/organizations/oauth2/v2.0/token</description>
    <label>Microsoft Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>