force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Notify_Users__c.field-meta.xml
<CustomField>
    <fullName>Notify_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send notifications to users about sync status</description>
    <inlineHelpText>Send notifications to users</inlineHelpText>
    <label>Notify Users</label>
    <type>Checkbox</type>
</CustomField>