force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Queueable_Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Delay_Minutes__c</fullName>
    <description>Delay in minutes between queueable jobs</description>
    <inlineHelpText>Delay between queueable jobs in minutes</inlineHelpText>
    <label>Queueable Delay Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>