force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Sync_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master switch to enable/disable email sync</description>
    <inlineHelpText>Enable or disable email synchronization</inlineHelpText>
    <label>Email Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>