force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Sync_Frequency_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Sync_Frequency_Minutes__c</fullName>
    <description>How often to run sync in minutes</description>
    <inlineHelpText>Sync frequency in minutes</inlineHelpText>
    <label>Sync Frequency Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>