force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Sync_Precedence__c.field-meta.xml
<CustomField>
    <fullName>Sync_Precedence__c</fullName>
    <description>JSON configuration defining the precedence order for matching sender emails to Lead, Contact, and User records. Example: {&quot;1&quot;: [&quot;Lead&quot;, &quot;Contact&quot;, &quot;User&quot;]}</description>
    <label>Sync Precedence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>