force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Task_Lookback_Days__c.field-meta.xml
<CustomField>
    <fullName>Task_Lookback_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Number of days back to sync tasks</description>
    <inlineHelpText>How many days back to sync tasks</inlineHelpText>
    <label>Task Lookback Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>