force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/Task_Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Task_Sync_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable task synchronization</description>
    <inlineHelpText>Enable task sync functionality</inlineHelpText>
    <label>Task Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>