force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/WS_Gmail_Enabled__c.field-meta.xml
<CustomField>
    <fullName>WS_Gmail_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Gmail/Google Workspace sync for emails, calendar, and tasks</description>
    <inlineHelpText>When enabled, users can sync their Gmail emails, calendar events, and tasks</inlineHelpText>
    <label>Gmail Enabled</label>
    <type>Checkbox</type>
</CustomField>