force-app/main/default/objects/AI_Workspace_Sync_Settings__c/fields/WS_Outlook_Enabled__c.field-meta.xml
<CustomField>
    <fullName>WS_Outlook_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Outlook/Microsoft 365 workspace sync for emails, calendar, and tasks</description>
    <inlineHelpText>When enabled, users can sync their Outlook emails, calendar events, and tasks</inlineHelpText>
    <label>Outlook Enabled</label>
    <type>Checkbox</type>
</CustomField>